update code all

--- a/Assignment/web/footer.html
+++ b/Assignment/web/footer.html
@@ -1,8 +1,8 @@
 <footer class="bg-dark">
     <div class="container">
-        <div class="row">
+        <div class="row"  style="padding-top: 15px">
             <div class="col-4">
-                <p class="title">CUSTOMER SERVICE</p>
+                <p class="title" style="margin-left: -99px">CUSTOMER SERVICE</p>
                 <ul>
                     <li class="content">Help & Contact Us</li>
                     <li>Returns & Refunds</li>
@@ -10,7 +10,7 @@
                 </ul>
             </div>
             <div class="col-4">
-                <p class="title">COMPANY</p>
+                <p class="title" style="margin-left: -180px">COMPANY</p>
                 <ul>
                     <li>What We Do</li>
                     <li>Available Services</li>
@@ -18,7 +18,7 @@
                 </ul>
             </div>
             <div class="col-4">
-                <p class="title">PROFILE</p>
+                <p class="title" style="margin-left: -195px">PROFILE</p>
                 <ul>
                     <li>Twitter</li>
                     <li>Instagram</li>
